increased fonts size and added margin to jumbotron

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bg-blue font-white container" id="jumbotron">
         <h3>The Greate</h3>
-        <h1 id="randomRGB"id="sq1" ></h1>
+        <h1 id="randomRGB" class="m-t m-b"></h1>
         <h3>Guessing Game</h3>
     </div>
 
