--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,35 @@
     <link rel="stylesheet" href="css/colorGame.css">
     <title>XmasTree</title>
 </head>
-<body>
-    <div class="bg-blue font-white container" id="jumbotron">
+
+<body class="bg-dark">
+
+    <div class="bg-blue font-white text-center" id="jumbotron">
         <h3>The Greate</h3>
         <h1 id="randomRGB" class="m-t m-b"></h1>
         <h3>Guessing Game</h3>
     </div>
 
-    <div>
-        <div class="conatiner nav-flex font-blue">
-            <h4 class="nav" id="newColor">New Colors</h4>
-            <h4 class="nav" id="tryAgain"></h4>
-            <h4 class="nav" id="easy" >Easy</h4>
-            <h4 class="nav" id="hard">Hard</h4>
-        </div>
+
+    <div class="conatiner nav-flex font-blue bg-whitish">
+        <h4 class="nav" id="newColor">New Colors</h4>
+        <h4 class="nav" id="tryAgain"></h4>
+        <h4 class="nav" id="easy">Easy</h4>
+        <h4 class="nav" id="hard">Hard</h4>
     </div>
 
-    <div class="bg-dark">
-        <div class="container flex-container">
-            <div id="sq1" class="square"></div>
-            <div id="sq2" class="square"></div>
-            <div id="sq3" class="square"></div>
-            <div id="sq4" class="square"></div>
-            <div id="sq5" class="square"></div>
-            <div id="sq6" class="square"></div>
-        </div>
+    <div class="container">
+        <div id="sq1" class="square"></div>
+        <div id="sq2" class="square"></div>
+        <div id="sq3" class="square"></div>
+        <div id="sq4" class="square"></div>
+        <div id="sq5" class="square"></div>
+        <div id="sq6" class="square"></div>
     </div>
+
 
 
     <script src="colorGame.js"></script>
 </body>
+
 </html>
