changed hs for buttons

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 <body class="bg-dark">
 
     <div class="bg-blue font-white text-center" id="jumbotron">
-        <h3>The Greate</h3>
-        <h1 id="randomRGB" class="m-t m-b"></h1>
-        <h3>Guessing Game</h3>
+        <h1>The Greate<span id="randomRGB" class="m-t m-b"></span>Guessing Game</h1>
     </div>
 
 
-    <div class="conatiner nav-flex font-blue bg-whitish">
-        <h4 class="nav" id="newColor">New Colors</h4>
+    <div class="stripe conatiner nav-flex font-blue bg-whitish">
+        <button class="nav" id="newColor">New Colors</button>
         <h4 class="nav" id="tryAgain"></h4>
-        <h4 class="nav" id="easy">Easy</h4>
-        <h4 class="nav" id="hard">Hard</h4>
+        <button class="nav" id="easy">Easy</button>
+        <button class="nav" id="hard">Hard</button>
     </div>
 
     <div class="container">
