fixed buttom hovers

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="stripe conatiner nav-flex font-blue bg-whitish">
         <button class="nav" id="newColor">New Colors</button>
-        <h4 class="nav" id="tryAgain"></h4>
+        <h4 id="tryAgain"></h4>
         <button class="nav" id="easy">Easy</button>
-        <button class="nav" id="hard">Hard</button>
+        <button class="nav selected" id="hard">Hard</button>
     </div>
 
     <div class="container">
