fixed font colors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
 
-    <div class="stripe conatiner nav-flex font-blue bg-whitish">
+    <div class="stripe conatiner nav-flex bg-whitish">
         <button class="nav" id="newColor">New Colors</button>
         <h4 id="tryAgain"></h4>
         <button class="nav" id="easy">Easy</button>
